fix: align sidebar nav position

--- a/src/styles/01-sidebar.css
+++ b/src/styles/01-sidebar.css
@@ -143,7 +143,7 @@
     flex-direction: column;
     gap: 15px;
     width: fit-content;
-    margin-top: -40px;
+    margin-top: 0;
 
     opacity: 0;
     transition: opacity var(--transition);
